Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4945

CID 1364096: Uninitialized members in iocore/net/UnixNetAccept.cc:

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Network
    • None

    Description

      *** CID 1364096:  Uninitialized members  (UNINIT_CTOR)
      /iocore/net/UnixNetAccept.cc: 524 in NetAccept::NetAccept(const NetProcessor::AcceptOptions &)()
      518     // Accept Event handler
      519     //
      520     //
      521     
      522     NetAccept::NetAccept(const NetProcessor::AcceptOptions &_opt) : Continuation(NULL), period(0), ifd(NO_FD), opt(_opt)
      523     {
         CID 1364096:  Uninitialized members  (UNINIT_CTOR)
         Non-static class member "epoll_vc" is not initialized in this constructor nor in any functions that it calls.
      524     }
      525     
      526     //
      527     // Stop listening.  When the next poll takes place, an error will result.
      528     // THIS ONLY WORKS WITH POLLING STYLE ACCEPTS!
      529     //
      
      

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              zwoop Leif Hedstrom
              zwoop Leif Hedstrom
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h