TS-4945: Remove unused member variable, epoll_vc